--- a/apps/xdtool/app/index.html
+++ b/apps/xdtool/app/index.html
@@ -7,12 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>XDTool</title>
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/xdframe.js"></script>
+    <script src="js/main.js" async></script>
 </head>
 
 <body>
-    <div class="container">
-        
-    </div>
+    <ele-frame>
+        <xd-page src="js/pages/main -pack" class="main_page"></xd-page>
+    </ele-frame>
 </body>
 
 </html>
