--- a/apps/xdtool/app/js/comps/ele-frame/ele-frame.html
+++ b/apps/xdtool/app/js/comps/ele-frame/ele-frame.html
@@ -5,13 +5,33 @@
         height: 100%;
     }
 
-    .main_container {
-        display: block;
+    .container {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         height: 100%;
     }
+
+    .top {
+        height: 35px;
+        line-height: 35px;
+        font-size: 12px;
+        text-align: center;
+        background-color: #fff;
+        -webkit-app-region: drag;
+        user-select: none;
+    }
+
+    .main {
+        position: relative;
+        margin-top: 2px;
+        flex: 1;
+    }
 </style>
 
-<div class="main_container">
-    <slot></slot>
+<div class="container">
+    <div class="top" @dblclick="dblTitle">我是头部</div>
+    <div class="main">
+        <slot></slot>
+    </div>
 </div>
