--- a/apps/xdtool/app/index.html
+++ b/apps/xdtool/app/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>XDTool</title>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/xdframe.js"></script>
+    <script src="js/xdframe.js" async></script>
     <script src="js/main.js" async></script>
 </head>
 
 <body>
     <ele-frame>
-        <xd-page src="js/pages/main -pack" class="main_page"></xd-page>
+        <xd-page src="js/pages/main/main.js -r" class="main_page"></xd-page>
     </ele-frame>
 </body>
 
