add more components

--- a/apps/xdtool/app/index.html
+++ b/apps/xdtool/app/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <ele-frame>
-        <xd-page src="js/pages/main/main.js -r" class="main_page"></xd-page>
+        <!-- <xd-page src="js/pages/main/main.js -r" class="main_page"></xd-page> -->
     </ele-frame>
 </body>
 
