--- a/apps/xdtool/app/js/pages/main/main.html
+++ b/apps/xdtool/app/js/pages/main/main.html
@@ -8,6 +8,7 @@
     .xt_left {
         width: 230px;
         height: 100%;
+        margin-left: 3px;
         overflow-y: auto;
         background-color: #fff;
     }
@@ -38,6 +39,9 @@
     <div class="xt_left">
         <h3>项目</h3>
         <div xv-tar="pjCon"> </div>
+    </div>
+    <div class="xt_left">
+        <pannel-file />
     </div>
     <div class="xt_right">
         <div class="pannel" style="margin: 6px">
