--- a/apps/xdtool/app/js/pages/main/main.html
+++ b/apps/xdtool/app/js/pages/main/main.html
@@ -5,12 +5,17 @@
         height: 100%;
     }
 
-    .xt_left {
+    .xt_left,
+    .xt_left2 {
         width: 230px;
         height: 100%;
         margin-left: 3px;
         overflow-y: auto;
         background-color: #fff;
+    }
+
+    .xt_left2 {
+        width: 300px;
     }
 
     .xt_right {
@@ -40,7 +45,7 @@
         <h3>项目</h3>
         <div xv-tar="pjCon"> </div>
     </div>
-    <div class="xt_left">
+    <div class="xt_left2">
         <pannel-file />
     </div>
     <div class="xt_right">
