--- a/apps/xdtool/app/js/pannels/pannel-file/pannel-file.html
+++ b/apps/xdtool/app/js/pannels/pannel-file/pannel-file.html
@@ -1,10 +1,17 @@
 <div class="container">
     <div class="title">文件</div>
     <div class="file_con">
-        <file-block name="文件夹1">
-            <file-block name="文件夹1-2"></file-block>
+        <file-block name="文件夹1" is-dir="true">
+            <file-block name="文件夹1-1" is-dir="true">
+                <file-block name="xdframe.min.js"></file-block>
+                <file-block name="aaa.png"></file-block>
+                <file-block name="bbbbb.jpg"></file-block>
+                <file-block name="ccccccccccc.html"></file-block>
+            </file-block>
+            <file-block name="jQuery.min.json"></file-block>
+            <file-block name="asdasdasd"></file-block>
         </file-block>
-        <file-block name="文件夹2"></file-block>
-        <file-block name="文件夹3"></file-block>
+        <file-block name="文件夹2" is-dir="true"></file-block>
+        <file-block name="文件夹啊3.css"></file-block>
     </div>
 </div>
