add rightMenu and more

--- a/apps/xdtool/app/index.html
+++ b/apps/xdtool/app/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>XDTool</title>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/xdframe.js" async></script>
+    <script src="js/ofa.js" async></script>
     <script src="js/main.js" async></script>
     <style>
         .loading_con {
