--- a/apps/xdtool/app/js/pages/main/main.html
+++ b/apps/xdtool/app/js/pages/main/main.html
@@ -50,7 +50,7 @@
     }
 </style>
 
-<slide-frame active="projects" :hideleft="hideFrameLeft">
+<slide-frame :active="activePannel" :hideleft="hideFrameLeft">
     <div slide-frame-btn="one" slot="btn">
         <span class="iconfont" style="font-size:20px;">&#xe600;</span>
     </div>
