--- a/server/server.html
+++ b/server/server.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>server</title>
+    <script src="ofaStorage.js"></script>
     <script src="apps.js"></script>
     <script src="server.js"></script>
     <style>
