--- a/apps/xdtool/app/js/command/rightmenu/rightmenu-test.html
+++ b/apps/xdtool/app/js/command/rightmenu/rightmenu-test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>right-menu test</title>
-    <script src="../../xdframe.js"></script>
+    <script src="../../ofa.js"></script>
     <link rel="stylesheet" href="right-menu.css">
     <script>
         load("./rightmenu").then(f => window.rightmenu = f);
@@ -38,12 +38,38 @@
                 </div>
                 <div class="menu_block san_jiao">
                     <div class="menu_block_name">哈哈66666</div>
+                    <div class="menu_con">
+                        <div class="menu_list">
+                            <div class="group">
+                                <div class="menu_block">
+                                    <div class="menu_block_name">哈哈1</div>
+                                </div>
+                                <div class="menu_block">
+                                    <div class="menu_block_name">哈哈2</div>
+                                </div>
+                                <div class="menu_block">
+                                    <div class="menu_block_name">哈哈3</div>
+                                </div>
+                            </div>
+                            <div class="group">
+                                <div class="menu_block">
+                                    <div class="menu_block_name">哈哈444444</div>
+                                </div>
+                                <div class="menu_block">
+                                    <div class="menu_block_name">哈哈5555555</div>
+                                </div>
+                                <div class="menu_block san_jiao">
+                                    <div class="menu_block_name">哈哈66666</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div id="testEle" style="height:400px;background-color: rgba(0,0,0,.01);"></div>
+    <div id="testEle" style="height:1000px;background-color: rgba(0,0,0,.01);"></div>
 
 
     <script>
@@ -54,13 +80,29 @@
                 {
                     label: '文件',
                     click() {
-                        console.log('点击事件');
+                        console.log('点击文件');
                     }
                 },
                 {
                     label: '编辑', submenu: [
-                        { label: '保存' },
-                        { label: '另存' }
+                        {
+                            label: '保存',
+                            click() {
+                                console.log("保存");
+                            }
+                        },
+                        {
+                            label: '另存', submenu: [{
+                                label: "哈哈1",
+                                click() {
+                                    console.log("哈哈1");
+                                }
+                            }, {
+                                label: "哈哈2"
+                            }, {
+                                label: "哈哈3333333333"
+                            }]
+                        }
                     ]
                 },
                 { type: "separator" },
