--- a/apps/xdtool/app/js/pannels/pannel-file/comps/file-block/file-block-test.html
+++ b/apps/xdtool/app/js/pannels/pannel-file/comps/file-block/file-block-test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="../../../../xdframe.js"></script>
+    <script src="../../../../ofa.js"></script>
     <script>
         load("./file-block");
     </script>
@@ -15,7 +15,7 @@
 <body>
     <file-block name="文件夹1" is-dir="true">
         <file-block name="文件夹1-1" is-dir="true">
-            <file-block name="xdframe.min.js"></file-block>
+            <file-block name="ofa.min.js"></file-block>
             <file-block name="aaa.png"></file-block>
             <file-block name="bbbbb.jpg"></file-block>
             <file-block name="ccccccccccc.html"></file-block>
