--- a/apps/xdtool/app/js/pannels/pannel-file/pannel-file.html
+++ b/apps/xdtool/app/js/pannels/pannel-file/pannel-file.html
@@ -4,7 +4,7 @@
         <div class="file_con_scroller" xv-tar="fileCon">
             <file-block name="文件夹1" is-dir="true">
                 <file-block name="文件夹1-1" is-dir="true">
-                    <file-block name="xdframe.min.js"></file-block>
+                    <file-block name="ofa.min.js"></file-block>
                     <file-block name="aaa.png"></file-block>
                     <file-block name="bbbbb.jpg"></file-block>
                     <file-block name="ccccccccccc.html"></file-block>
