--- a/apps/xdtool/app/js/pannels/pannel-file/pannel-file.html
+++ b/apps/xdtool/app/js/pannels/pannel-file/pannel-file.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <div class="title">文件</div>
+    <div class="title">{{dirName}}</div>
     <div class="file_con">
         <div class="file_con_scroller" xv-tar="fileCon">
-            <file-block name="文件夹1" is-dir="true">
+            <!-- <file-block name="文件夹1" is-dir="true">
                 <file-block name="文件夹1-1" is-dir="true">
                     <file-block name="ofa.min.js"></file-block>
                     <file-block name="aaa.png"></file-block>
@@ -13,7 +13,7 @@
                 <file-block name="asdasdasd"></file-block>
             </file-block>
             <file-block name="文件夹2" is-dir="true"></file-block>
-            <file-block name="文件夹啊3.css"></file-block>
+            <file-block name="文件夹啊3.css"></file-block> -->
         </div>
     </div>
 </div>
