--- a/apps/xdtool/app/js/command/rightmenu/rightmenu-test.html
+++ b/apps/xdtool/app/js/command/rightmenu/rightmenu-test.html
@@ -31,7 +31,7 @@
             </div>
             <div class="group">
                 <div class="menu_block">
-                    <div class="menu_block_name">哈哈444444</div>
+                    <div class="menu_block_name">哈哈444444哈哈444444哈哈444444</div>
                 </div>
                 <div class="menu_block">
                     <div class="menu_block_name">哈哈5555555</div>
@@ -78,7 +78,7 @@
             // 设定菜单
             rightmenu([
                 {
-                    label: '文件',
+                    label: '文件文件文件文件文件文件文件文件文件文件',
                     click() {
                         console.log('点击文件');
                     }
