--- a/apps/xdtool/app/js/pages/main/main.html
+++ b/apps/xdtool/app/js/pages/main/main.html
@@ -12,7 +12,8 @@
     <div slide-frame-page="one">
         <div class="container">
             <div class="xt_left">
-                <pannel-file />
+                <pannel-file></pannel-file>
+                <div class="xf_left_line" xv-tar="xfLine"></div>
             </div>
             <div class="xt_right">
                 <!-- <div class="pannel">
@@ -25,6 +26,6 @@
         <pannel-p-overview xv-tar="pOverview"></pannel-p-overview>
     </div>
     <div class="p_overview" slide-frame-page="config">
-        设置页
+        <pannel-config></pannel-config>
     </div>
 </slide-frame>
