ready the remoter

--- a/apps/xdtool/app/js/pages/main/main.html
+++ b/apps/xdtool/app/js/pages/main/main.html
@@ -16,9 +16,9 @@
                 <div class="xf_left_line" xv-tar="xfLine"></div>
             </div>
             <div class="xt_right">
-                <!-- <div class="pannel">
-                    <pannel-info></pannel-info>
-                </div> -->
+                <div class="xt_right_block">
+                    <pannel-remote></pannel-remote>
+                </div>
             </div>
         </div>
     </div>
