--- a/apps/xdtool/app/js/pannels/pannel-config/pannel-config.html
+++ b/apps/xdtool/app/js/pannels/pannel-config/pannel-config.html
@@ -12,8 +12,9 @@
     </div>
     <div class="title">关于</div>
     <div class="con">
-        <div class="line">Copyright(R) 2020 HuangYao</div>
-        <div class="line">项目地址： http://xxx.com/</div>
+        <div class="line">Copyright(R) 2020 YAO</div>
+        <div class="line">项目地址： https://github.com/kirakiray/XDTool</div>
+        <div class="line">问题反馈： https://github.com/kirakiray/XDTool/issues</div>
         <div class="line">当前版本： v0.1.0</div>
     </div>
 </div>
