--- a/apps/xdtool/app/js/pannels/pannel-config/pannel-config.html
+++ b/apps/xdtool/app/js/pannels/pannel-config/pannel-config.html
@@ -1,6 +1,6 @@
 <div class="main">
-    <div class="title">设置</div>
-    <div class="con">
+    <div class="title" style="display:none;">设置</div>
+    <div class="con" style="display:none;">
         <div class="line">
             <input type="checkbox" id="showHiddenFile" xv-model="showHiddenFile">
             <label for="showHiddenFile">显示隐藏文件（文件夹）</label>
