--- a/apps/xdtool/app/remoter/xdtool_remoter_test.html
+++ b/apps/xdtool/app/remoter/xdtool_remoter_test.html
@@ -19,13 +19,11 @@
         setTimeout(() => {
             class A {
                 constructor() {
-                    // this.a = "I am a";
+                    this.a = "I am a";
                     this.a_obj = {
                         val: "I am a_obj"
                     };
                 }
-
-                a = "I am a";
 
                 get a_pri() {
                     return "aaaaaaaaa_pri";
