--- a/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.html
+++ b/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.html
@@ -1,2 +1,6 @@
-<div class="title">离线端</div>
-<div class="list" xv-tar="list"></div>
+<div class="con">
+    <div class="title">离线端</div>
+    <div class="list">
+        <div class="inner_list" xv-tar="list"></div>
+    </div>
+</div>
