--- a/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.html
+++ b/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.html
@@ -1,6 +1,6 @@
-<div class="con">
-    <div class="title">离线端</div>
-    <div class="list">
+<div class="pannel">
+    <div class="pannel_title">所有remoter</div>
+    <div class="list" :autoheight="listAutoHeight">
         <div class="inner_list" xv-tar="list"></div>
     </div>
 </div>
