--- a/apps/xdtool/app/js/comps/slide-frame/slide-frame.html
+++ b/apps/xdtool/app/js/comps/slide-frame/slide-frame.html
@@ -54,12 +54,8 @@
         flex: 1;
     }
 
-    .slide_frame[hideleft="true"] .btns_slot {
-        opacity: 0;
-        width: 0;
-    }
 </style>
-<div class="slide_frame" :hideleft="hideleft">
+<div class="slide_frame">
     <div class="left_btns_tool">
         <div class="btns_slot">
             <slot name="btn"></slot>
