--- a/apps/xdtool/app/js/pages/main/main.html
+++ b/apps/xdtool/app/js/pages/main/main.html
@@ -1,11 +1,11 @@
-<slide-frame :active="activePannel" :hideleft="hideFrameLeft">
+<slide-frame :active="activePannel">
     <div slide-frame-btn="one" slot="btn" style="display:none;">
         <span class="iconfont" style="font-size:20px;">&#xe600;</span>
     </div>
     <div slide-frame-btn="remoter" slot="btn">
         <span class="iconfont">&#xe66b;</span>
     </div>
-    <div slide-frame-btn="projects" slot="bottomBtn" style="display:none;">
+    <div slide-frame-btn="projects" slot="bottomBtn">
         <span class="iconfont">&#xe603;</span>
     </div>
     <div slide-frame-btn="config" slot="bottomBtn">
@@ -19,7 +19,7 @@
             </div>
             <div class="xt_right">
                 <div class="xt_right_block">
-                    <!-- <pannel-remote></pannel-remote> -->
+                    <pannel-remote list-auto-height="true"></pannel-remote>
                 </div>
             </div>
         </div>
