--- a/apps/xdtool/app/js/pannels/pannel-p-overview/comps/pj-block/pj-block.html
+++ b/apps/xdtool/app/js/pannels/pannel-p-overview/comps/pj-block/pj-block.html
@@ -5,23 +5,41 @@
     }
 
     .pj_block {
+        display: flex;
         position: relative;
-        width: 120px;
-        min-height: 120px;
+        height: 60px;
         cursor: pointer;
-        /* background-color: rgba(0, 0, 0, .05); */
+    }
+
+    .pj_block:hover {
+        background-color: rgba(0, 0, 0, .01);
     }
 
     .pj_block_pic {
-        width: 100%;
-        height: 0;
-        padding-bottom: 100%;
+        width: 60px;
+        height: 60px;
         border-radius: 4px;
         background-color: rgba(0, 0, 0, .05);
     }
 
+    .pj_right {
+        position: relative;
+        flex: 1;
+        margin-left: 10px;
+    }
+
+    .right_con {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
     .pj_block_name {
-        padding: 8px 4px 0;
         font-size: 12px;
         line-height: 18px;
         max-height: 36px;
@@ -31,7 +49,12 @@
 
     .pj_block_time {
         display: none;
-        padding: 0 4px 4px;
+        font-size: 10px;
+        color: #999;
+    }
+
+    .pj_block_path {
+        margin-top: 2px;
         font-size: 10px;
         color: #999;
     }
@@ -41,6 +64,10 @@
     }
 
     .pj_block[active="1"] .pj_block_time {
+        color: rgba(2, 94, 170, 0.973);
+    }
+
+    .pj_block[active="1"] .pj_block_path {
         color: rgba(2, 94, 170, 0.973);
     }
 
@@ -81,8 +108,13 @@
 </style>
 <div class="pj_block" :active="active" :showtime="showTime">
     <div class="pj_block_pic"></div>
-    <div class="pj_block_name">{{name}}</div>
-    <div class="pj_block_time addtime">{{addTimeText}}</div>
-    <div class="pj_block_time modifytime">{{modifyTimeText}}</div>
+    <div class="pj_right">
+        <div class="right_con">
+            <div class="pj_block_name">{{name}}</div>
+            <div class="pj_block_time addtime">{{addTimeText}}</div>
+            <div class="pj_block_time modifytime">{{modifyTimeText}}</div>
+            <div class="pj_block_path">{{path}}</div>
+        </div>
+    </div>
     <div class="close_btn" @click="removeBlock">×</div>
 </div>
