ok the  read dir system

--- a/apps/xdtool_app/pages/main/main.html
+++ b/apps/xdtool_app/pages/main/main.html
@@ -1,6 +1,8 @@
 <div class="container">
     <div class="left" style="width: 300px;">
-        
+        <div class="dir">
+            <div class="dir_main" xv-tar="dirMain"></div>
+        </div>
     </div>
     <div class="main"></div>
 </div>
