--- a/apps/xdtool_app/index.html
+++ b/apps/xdtool_app/index.html
@@ -51,6 +51,7 @@
 
 <body>
     <ele-frame>
+        <div slot="title">XDTool</div>
         <xd-app>
             <xd-page src="pages/main/main"></xd-page>
         </xd-app>
