--- a/apps/xdtool_app/pages/main/main.html
+++ b/apps/xdtool_app/pages/main/main.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <div class="left" style="width: 300px;">
+    <div class="left xt_left" style="width: 300px;">
+        <div class="left_sizer"></div>
         <div class="dir">
             <div class="dir_main" xv-tar="dirMain"></div>
         </div>
