--- a/apps/xdtool_app/index.html
+++ b/apps/xdtool_app/index.html
@@ -54,7 +54,7 @@
     <ele-frame>
         <div slot="title">XDTool</div>
         <xd-app>
-            <xd-page src="pages/welcome/welcome"></xd-page>
+            <!-- <xd-page src="pages/welcome/welcome"></xd-page> -->
             <!-- <xd-page src="pages/main/main"></xd-page> -->
         </xd-app>
     </ele-frame>
