--- a/apps/xdtool_app/pages/main/main.html
+++ b/apps/xdtool_app/pages/main/main.html
@@ -5,5 +5,7 @@
             <div class="dir_main" xv-tar="dirMain"></div>
         </div>
     </div>
-    <div class="main"></div>
+    <div class="main">
+
+    </div>
 </div>
