add input file-block

--- a/apps/xdtool_app/comps/file-block/file-block-test.html
+++ b/apps/xdtool_app/comps/file-block/file-block-test.html
@@ -23,7 +23,9 @@
         <file-block name="jQuery.min.json"></file-block>
         <file-block name="asdasdasd"></file-block>
     </file-block>
-    <file-block name="文件夹2" is-dir="true"></file-block>
+    <file-block name="文件夹2" is-dir="true">
+        <file-block mode="input" placeholder=""></file-block>
+    </file-block>
     <file-block name="文件夹啊3.css"></file-block>
 </body>
 
